# krb5-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  docker-compose.test.yml  pr
.github/instructions/: code-review.instructions.md  rust.instructions.md
.github/workflows/: ci.yml  release.yml
examples/: kinit.rs
src/: crypto.rs  error.rs  lib.rs  types.rs
src/client/: mod.rs
src/crypto/: aes_cts.rs  aes_sha1.rs  dk.rs  hmac_sha1.rs  mod.rs  nfold.rs  util.rs
src/gssapi/: mod.rs
src/protocol/: as_exchange.rs  credential.rs  error_codes.rs  mod.rs  preauth.rs  tgs_exchange.rs  validate.rs
src/transport/: mod.rs  tcp.rs  udp.rs  udp_tcp.rs
src/types/: ap.rs  basic.rs  enums.rs  error_msg.rs  fast.rs  flags.rs  kdc.rs  mod.rs  preauth.rs  primitives.rs  safe_priv_cred.rs  ticket.rs
tests/: as_exchange_integration.rs  client_integration.rs  tgs_exchange_integration.rs  types_roundtrip.rs
tests/kdc/: kdc.conf  krb5.conf  setup-other.sh  setup.sh
