[package]
name = "krb5-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
description = "Pure Rust Kerberos V5: GSSAPI, SPNEGO, PKINIT. No C FFI, no system krb5 dependency."
repository = "https://github.com/structured-world/krb5-rs"
homepage = "https://github.com/structured-world/krb5-rs"
documentation = "https://docs.rs/krb5-rs"
keywords = ["kerberos", "gssapi", "spnego", "active-directory", "authentication"]
categories = ["authentication", "cryptography", "network-programming"]
readme = "README.md"

[dependencies]
# ASN.1 DER encoding/decoding
rasn = "0.28"

# Crypto
aes = "0.8"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"              # Legacy RC4-HMAC + GSSAPI channel bindings
pbkdf2 = "0.12"
subtle = "2"               # Constant-time comparison
rand = "0.9"
zeroize = { version = "1", features = ["derive"] }

# Flags
bitflags = "2"

# Network
tokio = { version = "1.50", features = ["net", "io-util", "time"], optional = true }

# Error handling
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1.50", features = ["full"] }
chrono = "0.4"

[features]
default = []
client = []                # Kerberos client (TGT/TGS request) — planned
gssapi = []                # GSSAPI/SPNEGO mechanism
pkinit = ["dep:x509-parser", "dep:rcgen"]  # PKINIT (X.509 + Kerberos)
fast = []                  # FAST pre-authentication tunneling
tokio = ["dep:tokio"]      # Tokio async transport adapter

[dependencies.x509-parser]
version = "0.18"
optional = true

[dependencies.rcgen]
version = "0.14"
optional = true
